[package]
name = "heap"
version = "0.1.0"
authors = ["Ketan Singh <ketansingh.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
criterion = "0.3"
rand = "0.7.3"

[[bench]]
name = "heap_bench"
harness = false